2003-02-03  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window.c (nautilus_window_finalize):
	Free window->last_geometry.
	Patch from Arjan van de Ven <arjanv@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c (create_normal_cache_icon):
	Free filename. Patch from Arjan van de Ven <arjanv@redhat.com>

2003-01-31  James Willcox  <jwillcox@gnome.org>

	* libnautilus-private/nautilus-icon-container.c:
	(handle_icon_button_press):

	Update the selection *before* we tell people to popup a context menu.

2003-01-29  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c (file_info_start):
	Clear get_info_failed before starting the get_file_info. This means
	that old failed get_info calls don't get "stuck", such as if you entered
	the wrong password in an smb share.

2003-01-28  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added THai (th) to ALL_LINGUAS

=== nautilus 2.2.0.2 ===

2003-01-27  Dave Camp  <dave@ximian.com>

	* NEWS: 
	* configure.in: 2.2.0.2.

2003-01-27  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c
	(nautilus_icon_factory_get_icon_for_file):
	Only pass GNOME_ICON_LOOKUP_FLAGS_EMBEDDING_TEXT if there
	is top-left text to use.

2003-01-23  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-directory-background.c
	(background_destroyed_callback): Remove callbacks for background
	gconf keys.

=== nautilus 2.2.0.1 ===

2003-01-22  Dave Camp  <dave@ximian.com>

	* NEWS:
	* configure.in: 2.2.0.1

2003-01-22  Dave Camp  <dave@ximian.com>

	* libnautilus/nautilus-view-standard-main.c: (make_object): Unref
	the control.

2003-01-22  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Added "am" and "ar" to ALL_LINGUAS

2003-01-22  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-01-21  Yanko Kaneti  <yaneti@declera.com>

	* configure.in: Added mk to ALL_LINGUAS by MK team request.

=== nautilus 2.2.0 ===